--- a/hw3/project/css/style.css
+++ b/hw3/project/css/style.css
@@ -34,19 +34,13 @@ button{
     align-self: center;
 }
 .products{
-    column-gap: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
-    grid-template-rows: 1fr;
+    display: flex;
+    justify-content: start;
     padding: 40px 80px;
-    justify-content: space-between;
+
 }
 .cart{
-    visibility: hidden;
-    column-gap: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
-    grid-template-rows: 1fr;
+    position: relative;
     padding: 40px 80px;
     justify-content: space-between;
 }
@@ -60,8 +54,10 @@ p {
     border-radius: 5px;
     overflow: hidden;
     margin: 20px 0;
+    margin-right: 30px;
 }
 .cart-item{
+
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -106,4 +102,46 @@ img {
     background-color: transparent;
     border-color: #2f2a2d;
     color: #2f2a2d;
+}
+
+.search-form{
+    position: relative;
+    margin-right: 50px;
+    display: inline-block;
+}
+
+.search-field {
+    box-sizing: border-box;
+    width: 200px;
+    color: #fafafa;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #fafafa;
+}
+.visible{
+    display: none;
+}
+.cart-item-block {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    border-radius: 5px;
+    box-sizing: border-box;
+    right: 0;
+    top: 130%;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    color: black;
+    width: 300px;
+}
+.cart-item-block:before{
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -10px;
+    right: 35px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid white;
 }
